# SmartCal

./: .gitignore  App.tsx  README.md  REVIEW_REPORT.md  build_err.txt  firebase.json  index.html  manifest.json  metadata.json  package-lock.json  package.json  sw.js  tsconfig.json  types.ts  vite.config.ts
.firebase/: hosting.ZGlzdA.cache
.github/workflows/: daily-reminder.yml
components/: AiAssistant.tsx  CalendarView.tsx  ConfirmModal.tsx  ConflictWarningModal.tsx  DashboardView.tsx  DatePickerPopover.tsx  DesktopAuthHelper.tsx  EditTaskModal.tsx  ErrorBoundary.tsx  FocusView.tsx  Header.tsx  KanbanView.tsx  LoginScreen.tsx  MobileNavigation.tsx  ModalsContainer.tsx  NotificationPopover.tsx  OnboardingModal.tsx  ReminderModal.tsx  SettingsModal.tsx  Sidebar.tsx  StatsView.tsx  TimelineView.tsx  Toast.tsx
functions/: package-lock.json  package.json  tsconfig.json
functions/lib/: index.js  index.js.map
functions/src/: index.ts
hooks/: useFCM.ts  useGoogleSync.ts  useModals.ts  useNotifications.ts  usePWA.ts  useReminders.ts  useTasks.ts  useTelegramSync.ts  useTheme.ts
public/: firebase-messaging-sw.js  manifest.json  sw.js
services/: fcmService.ts  firebase.ts  geminiService.ts  googleCalendarApiService.ts  googleCalendarService.ts  hapticService.ts  lunarService.ts  soundService.ts  telegramService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
