[package]
name = "smartcal"
version = "1.0.0"
description = "SmartCal - Lich thong minh"
authors = ["SmartCal Team"]
edition = "2021"

[lib]
name = "smartcal_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
