[package]
name = "smartcal"
version = "1.0.0"
description = "SmartCal - Lich thong minh"
authors = ["SmartCal Team"]
edition = "2021"

[lib]
name = "smartcal_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"        # Tối ưu cho dung lượng nhỏ
lto = true             # Link-Time Optimization - giảm đáng kể kích thước
strip = true           # Xóa debug symbols
codegen-units = 1      # Compile thành 1 unit → dead-code elimination tốt hơn
panic = "abort"        # Bỏ unwinding code → nhỏ hơn ~10%
